--- a/index.css
+++ b/index.css
@@ -2,3 +2,24 @@
     padding: 0;
     margin: 0;
 }
+
+div {
+    width: 150px;
+    height: 150px;
+    border: 2px solid black;
+    border-radius: 50%;
+    background-color: green;
+    line-height: 150px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    box-shadow: 2px 2px 2px red;
+}
+div:hover {
+    background-color: red;
+    box-shadow: 2px 2px 2px green;
+}
