--- a/index.css
+++ b/index.css
@@ -2,3 +2,29 @@
     padding: 0;
     margin: 0;
 }
+
+div {
+    width: 200px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    border: 1px solid #008c8c;
+    border-radius: 5px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    margin: auto;
+    transition: all 0.6s;
+}
+
+div:hover {
+    width: 300px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 30px;
+    background-color: lightblue;
+    color: #fff;
+    font-weight: bold;
+}
